--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <!--Font awesome script-->
     <script src="https://kit.fontawesome.com/e391ce7786.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
+        <!-- the search box inside a form-->
         <form action="index.html">
             <input type="search" placeholder="Search here">
             <i class="fas fa-search"></i>
